--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 html{
 
     height: 100%;
-    background-color: blue;
 
 }
 
@@ -13,9 +12,9 @@ body{
 }
 
 #container{
-    background-color: black;
+    background-color: rgb(151, 44, 44);
     height: 100%;
-    display: flex;
+    width: 100%;
     flex-direction: column;
 }
 
@@ -25,24 +24,65 @@ body{
     background-color: red;
 }
 
+#meioTres{
+    height: 40%;
+    width: 100%;
+    background-color: rgb(46, 16, 95);
+}
+
+#escrever{
+    height: 10%;
+    width: 100%;
+    background-color: #fff;
+}
+
+#textoVamosLa{
+    height: 90%;
+    width: 100%;
+}
+
+#baixoTres{
+    height: 30%;
+    width: 100%;
+    background-color: rgb(177, 229, 22);
+}
+
 #carrossel{
     height: 100%;
     width: 100%;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
 
-
-.imagem{
-    height: 70%;
-    width: 70%;
-    background-color: #fff;
+.dentro{
+    height: 100%;
+    width: 100%;
 }
 
 #meio{
-    height: 30%;
+    height: 100%;
     width: 100%;
     background-color: green;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.linhas{
+    height: 16.5%;
+    width: 100%;
+    background-color: rgb(34, 0, 128);
+    display: flex;
+}
+
+.meses{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #baixo{
@@ -51,4 +91,49 @@ body{
     background-color: yellow;
 }
 
+#containerUm{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
+#cimaPum{
+    height: 10%;
+    width: 100%;
+    background-color: #cb2121;
+}
+
+#doTitulo{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+}
+
+#titulo{
+    font-size: 25px;
+}
+
+#meioPum{
+    height: 75%;
+    width: 80%;
+    background-color: #21cb38;
+}
+
+#paraTexto{
+    height: 100%;
+    width: 100%;
+    background-color: #085993;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#baixoPum{
+    height: 15%;
+    width: 100%;
+    background-color: #2c9e54;
+}
