--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body{
 }
 
 #container{
-    background-color: rgb(151, 44, 44);
     height: 100%;
     width: 100%;
     flex-direction: column;
@@ -21,30 +20,80 @@ body{
 #cima{
     height: 30%;
     width: 100%;
-    background-color: red;
+}
+
+.imaa{
+    /* border-radius: 20px; */
 }
 
 #meioTres{
     height: 40%;
     width: 100%;
-    background-color: rgb(46, 16, 95);
 }
 
 #escrever{
-    height: 10%;
+    height: 20%;
     width: 100%;
-    background-color: #fff;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+}
+
+#vamosLa{
+    font-size: 25px;
+    font-family: serif;
 }
 
 #textoVamosLa{
-    height: 90%;
+    height: 80%;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#aaaa{
+    font-size: 20px;
+    font-family: serif;
 }
 
 #baixoTres{
     height: 30%;
     width: 100%;
-    background-color: rgb(177, 229, 22);
+}
+
+#escritoEscolha{
+    height: 25%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#escolhaForma{
+    font-size: 20px;
+    font-family: serif;
+}
+
+#dividir{
+    height: 75%;
+    width: 100%;
+    display: flex;
+}
+
+.divButEscolha{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.butEscolha{
+    height: 50px;
+    width: 75px;
+    text-align: center;
+    border-radius: 20px;
 }
 
 #carrossel{
@@ -102,7 +151,6 @@ body{
 #cimaPum{
     height: 10%;
     width: 100%;
-    background-color: #cb2121;
 }
 
 #doTitulo{
@@ -115,18 +163,25 @@ body{
 
 #titulo{
     font-size: 25px;
+    font-family: serif;
+}
+
+#textoUm{
+    font-family: serif;
+}
+
+#but{
+    border-radius: 20%;
 }
 
 #meioPum{
     height: 75%;
     width: 80%;
-    background-color: #21cb38;
 }
 
 #paraTexto{
     height: 100%;
     width: 100%;
-    background-color: #085993;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -135,5 +190,7 @@ body{
 #baixoPum{
     height: 15%;
     width: 100%;
-    background-color: #2c9e54;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
