--- a/styleMes.css
+++ b/styleMes.css
@@ -106,4 +106,7 @@ body{
 #divTexto{
     height: 90%;
     width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
