--- a/styleMes.css
+++ b/styleMes.css
@@ -72,7 +72,14 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    
+}
+
+#tudoIMGdois{
+    height: 90%;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #imagem{
