--- a/styleMes.css
+++ b/styleMes.css
@@ -57,6 +57,24 @@ body{
     border-radius: 20%;
 }
 
+#meioDois{
+    height: 25%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#meioTres{
+    height: 40%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 #meio{
     height: 50%;
     width: 100%;
@@ -67,7 +85,7 @@ body{
 }
 
 #tudoIMG{
-    height: 90%;
+    height: 100%;
     width: 90%;
     display: flex;
     align-items: center;
@@ -89,6 +107,26 @@ body{
     border:solid 1px;
 }
 
+#baixoDois{
+    height: 65%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+#baixoTres{
+    height: 50%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
 #baixo{
     height: 40%;
     width: 100%;
@@ -97,6 +135,17 @@ body{
     align-items: center;
     justify-content: center;
     
+}
+
+#voltaTextoBaixoDois{
+    height: 95%;
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border:solid 1px;
+    border-color: black;
+    border-radius: 20%;
 }
 
 #voltaTextoBaixo{
